--- a/index.html
+++ b/index.html
@@ -123,14 +123,6 @@
                             <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
                             <span>* correo *</span>
                         </li>
-                        <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* whatsapp *</span>
-                        </li>
-                        <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* facebook *</span>
-                        </li>
                     </ul>
                 </div>
                 <div class="column3">
@@ -138,13 +130,9 @@
                     <ul>
                         <li class="footer-element">
                             <img src="/resources/images/icons/google_maps.png" alt="" class="footer-icon">
-                            <a href="#map">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</a>
+                            <p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
                         </li>
                     </ul>
-                    <div class="map-container" id="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d982.5594072769912!2d-68.3163573!3d9.9141566!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e8082c35be90eaf%3A0xa5b42af60c231196!2sEscuela%20T%C3%A9cnica%20Industrial%20Robinsoniana%20Jos%C3%A9%20Laurencio%20Silva!5e0!3m2!1ses!2sve!4v1669198376300!5m2!1ses!2sve" width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <a href="" class="close">X</a>
-                    </div>
                 </div>
             </div>
         </footer>
