--- a/pages/servicios/servicios.html
+++ b/pages/servicios/servicios.html
@@ -65,10 +65,14 @@
             <section class="main-section side">
                 <div class="div-section">
                     <div class="content-section">
-                        <h1 class="title-section">Servicios y Propósito General</h1>
+                        <h1 class="title-section">Servicios y Propósitos</h1>
                         <div>
                             <img src="" class="img-content">
                         </div>
+                        <p class="text-section">
+                            <strong>Servicios:</strong>
+                        </p>
+                        <br>
                         <p class="text-section">Tenemos servicios de alimentación que se localizan en el comedor con asientos y un área amplia tambien con un cableado de electricidad y tuberias de agua; Ademas un wifi privado el cual solo accede el personal autorizado para la implementación de actividades dentro de la institución. Tambien poseemos con 4 baños tanto para el docente como para el alumno mas el del directivo.</p>
                         <br>
                         <p class="text-section">
@@ -79,12 +83,6 @@
                     </div>
                 </div>
             </section>
-            <aside class="side-bar">
-                <img src="" alt="" class="img-sidebar" />
-                <div class="text-sidebar-container">
-                    <p></p>
-                </div>
-            </aside>
         </main>
         <footer>
             <div class="footer-container">
@@ -99,22 +97,14 @@
                             <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
                             <span>* correo *</span>
                         </li>
-                        <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* whatsapp *</span>
-                        </li>
-                        <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* facebook *</span>
-                        </li>
                     </ul>
                 </div>
                 <div class="column3">
                     <h3 class="footer-title">Dirección</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <p>Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
+                            <img src="/resources/images/icons/google_maps.png" alt="" class="footer-icon">
+                            <p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
                         </li>
                     </ul>
                 </div>
