--- a/pages/menciones/minas.html
+++ b/pages/menciones/minas.html
@@ -91,12 +91,6 @@
                     </div>
                 </div>
             </section>
-            <aside class="side-bar">
-                <img src="" alt="" class="img-sidebar" />
-                <div class="text-sidebar-container">
-                    <p></p>
-                </div>
-            </aside>
         </main>
         <footer>
             <div class="footer-container">
@@ -111,22 +105,14 @@
                             <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
                             <span>* correo *</span>
                         </li>
-                        <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* whatsapp *</span>
-                        </li>
-                        <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* facebook *</span>
-                        </li>
                     </ul>
                 </div>
                 <div class="column3">
                     <h3 class="footer-title">Dirección</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <p>Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
+                            <img src="/resources/images/icons/google_maps.png" alt="" class="footer-icon">
+                            <p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
                         </li>
                     </ul>
                 </div>
