--- a/pages/estructura/estructura_fisica.html
+++ b/pages/estructura/estructura_fisica.html
@@ -120,6 +120,13 @@
                             <p><strong>Talle de Mecánica</strong> - La entrada se encuentra a la derecha de la entrada del comedor. Es amplio y posee las herramientas necesarias para el trabajo de mecánico, las areas del taller se divide en: <br> Area Automotriz, Area de Electricidad, Area de Refrigeración y el Area del Torno. La división por años de las especialidades es: 6to año (Automotriz y Torno), 4to y 5to año (Electricidad, Refrigeración y Torno).</p>
                         </div>
                     </div>
+                    <hr class="struc-line">
+                    <div class="struc-div">
+                        <img src="/resources/images/estructura/biblioteca1.jpg" class="struc-img">
+                        <div class="struc-text">
+                            <p><strong>Biblioteca</strong> - Contamos con una biblioteca la cual es un herramienta muy importante para las investigaciones, contiene una cantidad considerable de Libros. Se divide en secciones de: Inglés, Matemáticas, Biología, Pedagogía, GHC, Salud, entre otros.</p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
