--- a/pages/servicios/servicios.html
+++ b/pages/servicios/servicios.html
@@ -67,7 +67,8 @@
                     <div class="content-section">
                         <h1 class="title-section">Servicios y Propósitos</h1>
                         <div>
-                            <img src="" class="img-content">
+                            <img src="/resources/images/estructura/biblioteca1.jpg" class="img-content">
+                            <i><strong>Imágen de la Directora y los Estudiantes de 2do año realizando una actividad.</strong></i>
                         </div>
                         <p class="text-section">
                             <strong>Servicios:</strong>
