--- a/pages/estructura/estructura_fisica.html
+++ b/pages/estructura/estructura_fisica.html
@@ -140,8 +140,8 @@
                     <h3 class="footer-title">Contactos</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* correo *</span>
+                            <img src="/resources/images/icons/gmail.png" class="footer-icon">
+                            <a href=""><p>* correo *</p></a>
                         </li>
                     </ul>
                 </div>
@@ -150,7 +150,7 @@
                     <ul>
                         <li class="footer-element">
                             <img src="/resources/images/icons/google_maps.png" alt="" class="footer-icon">
-                            <p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
+                            <a href="https://goo.gl/maps/ZDik2LUL9zeCJXiV7"><p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p></a>
                         </li>
                     </ul>
                 </div>
