--- a/pages/nosotros/mision_vision_valores.html
+++ b/pages/nosotros/mision_vision_valores.html
@@ -103,8 +103,8 @@
                     <h3 class="footer-title">Contactos</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* correo *</span>
+                            <img src="/resources/images/icons/gmail.png" class="footer-icon">
+                            <a href=""><p>* correo *</p></a>
                         </li>
                     </ul>
                 </div>
