--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     <h3 class="footer-title">Contactos</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
-                            <span>* correo *</span>
+                            <img src="/resources/images/icons/gmail.png" class="footer-icon">
+                            <a href=""><p>* correo *</p></a>
                         </li>
                     </ul>
                 </div>
@@ -129,8 +129,8 @@
                     <h3 class="footer-title">Dirección</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/google_maps.png" alt="" class="footer-icon">
-                            <p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
+                            <img src="/resources/images/icons/google_maps.png" class="footer-icon">
+                            <a href="https://goo.gl/maps/ZDik2LUL9zeCJXiV7"><p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p></a>
                         </li>
                     </ul>
                 </div>
