--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -20,6 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/styles/styles.css" />
+        <script src="/scripts/index.js" defer></script>
     </head>
     <body>
         <header>
@@ -40,7 +41,7 @@
                         <li><a href="/index.html">Inicio</a></li>
                         <li>
                             <a href="#">Menciones</a>
-                            <ul>
+                            <ul id="sub-menu">
                                 <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
                                 <li><a href="/pages/menciones/administracion.html">Administración</a></li>
                                 <li><a href="/pages/menciones/minas.html">Minas</a></li>
