--- a/pages/nosotros/historia.html
+++ b/pages/nosotros/historia.html
@@ -20,6 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/styles/styles.css" />
+        <script src="/scripts/index.js" defer></script>
     </head>
     <body>
         <header>
@@ -49,7 +50,7 @@
                         </li>
                         <li>
                             <a href="#">Nosotros</a>
-                            <ul>
+                            <ul id="sub-menu">
                                 <li><a href="#">Historia</a></li>
                                 <li><a href="/pages/nosotros/mision_vision_valores.html">Misión, Visión y Valores</a></li>
                             </ul>
