"Galería, JavaScript y Correos".

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <a href="#"><p>Galería</p></a>
+                                    <a href="/pages/galeria/galeria.html"><p>Galería</p></a>
                                 </div>
                             </div>
                         </div>
@@ -120,8 +120,14 @@
                     <h3 class="footer-title">Contactos</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/gmail.png" class="footer-icon">
-                            <a href=""><p>* correo *</p></a>
+                            <img src="/resources/images/icons/gmail.png" class="footer-icon" />
+                            <p>
+                                <strong>Correo Institucional:</strong><br />
+                                <a href="etirjls.dirección@gmail.com">etirjls.dirección@gmail.com</a><br />
+                                <br />
+                                <strong>Correo del Departamento de Evaluaciones:</strong><br />
+                                <a href="dptoevaluacionjls@gmail.com">dptoevaluacionjls@gmail.com</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -129,8 +135,13 @@
                     <h3 class="footer-title">Dirección</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/google_maps.png" class="footer-icon">
-                            <a href="https://goo.gl/maps/ZDik2LUL9zeCJXiV7"><p id="map-button">Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p></a>
+                            <img src="/resources/images/icons/google_maps.png" class="footer-icon" />
+                            <a href="https://goo.gl/maps/ZDik2LUL9zeCJXiV7" target="_blank"
+                                ><p id="map-button">
+                                    Calle Plaza, Sector Buenos Aires <br />
+                                    Tinaquillo, Edo.Cojedes, Venezuela
+                                </p></a
+                            >
                         </li>
                     </ul>
                 </div>
