--- a/pages/menciones/minas.html
+++ b/pages/menciones/minas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMVM5Z2JYX"></script>
@@ -20,7 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/styles/styles.css" />
-        <script src="/scripts/index.js" defer></script>
+        <script src="/scripts/index.js" defer type="module"></script>
     </head>
     <body>
         <header>
@@ -37,11 +37,11 @@
                     <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon" />
                 </label>
                 <div class="menu">
-                    <ul id="menu">
+                    <ul>
                         <li><a href="/index.html">Inicio</a></li>
                         <li>
                             <a href="#">Menciones</a>
-                            <ul id="sub-menu">
+                            <ul id="menu">
                                 <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
                                 <li><a href="/pages/menciones/administracion.html">Administración</a></li>
                                 <li><a href="#">Minas</a></li>
@@ -57,7 +57,7 @@
                         </li>
                         <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
                         <li><a href="/pages/servicios/servicios.html">Servicios y Propósitos</a></li>
-                        <li><a href="#">Galería</a></li>
+                        <li><a href="/pages/galeria/galeria.html">Galería</a></li>
                     </ul>
                 </div>
             </nav>
@@ -103,8 +103,14 @@
                     <h3 class="footer-title">Contactos</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/gmail.png" class="footer-icon">
-                            <a href=""><p>* correo *</p></a>
+                            <img src="/resources/images/icons/gmail.png" class="footer-icon" />
+                            <p>
+                                <strong>Correo Institucional:</strong><br />
+                                <a href="etirjls.dirección@gmail.com">etirjls.dirección@gmail.com</a><br />
+                                <br />
+                                <strong>Correo del Departamento de Evaluaciones:</strong><br />
+                                <a href="dptoevaluacionjls@gmail.com">dptoevaluacionjls@gmail.com</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
