--- a/pages/servicios/servicios.html
+++ b/pages/servicios/servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMVM5Z2JYX"></script>
@@ -15,11 +15,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Servicios y Propósito General - Jose Laurencio Silva</title>
+        <title>Servicios y Propósitos - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/styles/styles.css" />
+        <script src="/scripts/index.js" defer type="module"></script>
     </head>
     <body>
         <header>
@@ -36,7 +37,7 @@
                     <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon" />
                 </label>
                 <div class="menu">
-                    <ul>
+                    <ul id="menu">
                         <li><a href="/index.html">Inicio</a></li>
                         <li>
                             <a href="#">Menciones</a>
@@ -56,7 +57,7 @@
                         </li>
                         <li><a href="/pages/estructura/estructura_fisica.html">Estructura Física</a></li>
                         <li><a href="#">Servicios y Propósitos</a></li>
-                        <li><a href="#">Galería</a></li>
+                        <li><a href="/pages/galeria/galeria.html">Galería</a></li>
                     </ul>
                 </div>
             </nav>
@@ -95,8 +96,14 @@
                     <h3 class="footer-title">Contactos</h3>
                     <ul>
                         <li class="footer-element">
-                            <img src="/resources/images/icons/gmail.png" class="footer-icon">
-                            <a href=""><p>* correo *</p></a>
+                            <img src="/resources/images/icons/gmail.png" class="footer-icon" />
+                            <p>
+                                <strong>Correo Institucional:</strong><br />
+                                <a href="etirjls.dirección@gmail.com">etirjls.dirección@gmail.com</a><br />
+                                <br />
+                                <strong>Correo del Departamento de Evaluaciones:</strong><br />
+                                <a href="dptoevaluacionjls@gmail.com">dptoevaluacionjls@gmail.com</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
